# codex

./: .gitignore
codex-rs/: Cargo.toml
codex-rs/swift-bridge/: Cargo.toml
codex-rs/swift-bridge/src/: bridge.rs  ffi.rs  lib.rs
sdk/swift/: Package.swift
sdk/swift/Bridge/include/: codex_swift_bridge.h  module.modulemap
sdk/swift/Scripts/: build-embedded-bridge.sh
sdk/swift/Sources/CodexSwift/: CodexClient.swift  EmbeddedRuntimeConfiguration.swift  JSONRPC.swift  JSONValue.swift  Models.swift
sdk/swift/Sources/CodexSwift/CodexSwift.docc/: CodexSwift.md
sdk/swift/Sources/CodexSwift/CodexSwift.docc/Articles/: IntegratingCodexOnIOS.md
sdk/swift/Sources/CodexSwift/Transport/: CodexTransport.swift  EmbeddedRustTransport.swift  ProcessTransport.swift  WebSocketTransport.swift
sdk/swift/Tests/CodexSwiftTests/: JSONValueTests.swift  ModelDecodingTests.swift
