[package]
name = "codex-swift-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_swift_bridge"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
codex-app-server = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-arg0 = { workspace = true }
codex-core = { workspace = true }
codex-feedback = { workspace = true }
codex-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
